# pyprojects

getlatest/: .editorconfig  .env.example  README.md  getlatest.py  pyproject.toml
gitlab_repo_group_sync/: .env.example  README.md  gitlab_repo_group_sync.py  pyproject.toml
